--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 </head>
 <body onload="iniciar();">
 
-<canvas id="canvas" width="900" height="500" style="background-color: #000"></canvas>
+<canvas id="canvas" width="900" height="500" style="background-color: #000"></canvas><br>
 
+Creado por Pablo Gallina
 <script type="text/javascript" src="script.js"></script>
+
+
 </body>
 </html>
